--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
+    "firebase": "^8.6.8",
     "moment": "^2.29.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
